--- a/TODO
+++ b/TODO
@@ -1,8 +1,8 @@
 Bugs:
     ☐ Command validation. No support for values like 900 -> 9:00. Command not run if using 900 hour.
     ☐ No margin in calendar view
+    ☐ Reset atoms when logout (store is populated)
     
-
 Feature:
     ☐ Improve command for adding new hours
     ☐ Improve adding and selecting hours calendars
@@ -10,7 +10,7 @@ Feature:
     ☐ Allow to add placeholders
     ☐ Background insert and delete for events
     ✔ Show numeric keyboard on mobile @done(21-04-22 00:19)
-    ☐ Allow edit hours
+    ✔ Allow edit hours @done(21-04-23 16:11)
     ☐ Sticky totals
     ☐ Progress indicator for adding calendar and other pages
     ☐ Allow to change theme (create light theme)
@@ -19,6 +19,7 @@ Feature:
     ☐ Show statistics
     ☐ Allow to set name for calendars
     ☐ Allow to remove calendars
+    ☐ Show actually selected calendar
 
 Refactor:
    ✔ Added jotai as state management @done(21-04-22 00:23)
