--- a/TODO
+++ b/TODO
@@ -27,4 +27,4 @@ Feature:
 
 Refactor:
    ✔ Added jotai as state management @done(21-04-22 00:23)
-    
+   ☐ Date, format, validators, helper functions etc.
